<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/activity_login_paddingTop"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tv_login_text_size"
        android:textStyle="bold"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tvLoginMsg"
        android:layout_below="@+id/tvLogin"
        android:layout_marginTop="@dimen/tv_loginMsg_marginTop"
        android:text="@string/loginMsg"
        android:textSize="@dimen/tv_loginMsg_text_size"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@+id/tvLoginMsg"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/lin_lay_login_marginBottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etEmail"
        android:layout_below="@+id/tvLoginMsg"
        android:hint="@string/hint_your_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:layout_width="@dimen/et_email_layout_width"
        android:layout_height="@dimen/et_email_layout_height" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_below="@+id/etEmail"
        android:inputType="textPassword"
        android:singleLine="true"
        android:hint="@string/hint_password"
        android:layout_width="@dimen/et_email_layout_width"
        android:layout_height="@dimen/et_email_layout_height" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="@dimen/btn_login_marginTop"
        android:background="@drawable/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
