<resources>
    <string name="app_name">Project</string>
    <string name="login">Login</string>
    <string name="loginMsg">Access your account details \nby loggin in</string>
    <string name="hint_your_email">Your Email</string>
    <string name="hint_password">Password</string>
    <string name="error_email_empty">Email is Empty</string>
    <string name="error_password_empty">Password is Empty</string>
    <string name="error_login_unsuccessful">Incorrect Email or Password</string>
    <string name="loading">Loading</string>
    <string name="movies">Movies</string>
    <string name="error_no_data">Could Not Load Data</string>
</resources>
