<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<TextView
    android:id="@+id/tvMovies"
    android:layout_marginLeft="@dimen/tv_movies_marginLeft"
    android:layout_marginTop="@dimen/tv_movies_marginTop"
    android:textSize="@dimen/tv_movies_text_size"
    android:text="@string/movies"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMoviesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/rv_moviesList_marginLeft"
        android:layout_marginTop="@dimen/rv_moviesList_marginTop"
        android:scrollbars="none" />

</RelativeLayout>